--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -10,4 +10,5 @@
   - DOMAIN-SUFFIX,playno1.com
   - DOMAIN-SUFFIX,jkforum.net
   - DOMAIN-SUFFIX,javdb.com 
-  - DOMAIN-SUFFIX,hanime1.me 
+  - DOMAIN-SUFFIX,hanime1.me
+  - DOMAIN-SUFFIX,xhamster19.com
