--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -12,3 +12,7 @@
   - DOMAIN-SUFFIX,javdb.com 
   - DOMAIN-SUFFIX,hanime1.me
   - DOMAIN-SUFFIX,xhamster19.com
+  - DOMAIN-SUFFIX,jmcomic3.cc
+  - DOMAIN-SUFFIX,18comic.org
+  - DOMAIN-SUFFIX,javlibrary.com
+  - DOMAIN-SUFFIX,cosindex.251.sh
