--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -16,3 +16,4 @@
   - DOMAIN-SUFFIX,18comic.org
   - DOMAIN-SUFFIX,javlibrary.com
   - DOMAIN-SUFFIX,cosindex.251.sh
+  - DOMAIN-SUFFIX,e-hentai.org
