--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -17,3 +17,5 @@
   - DOMAIN-SUFFIX,javlibrary.com
   - DOMAIN-SUFFIX,cosindex.251.sh
   - DOMAIN-SUFFIX,e-hentai.org
+  - DOMAIN-SUFFIX,nyahentai.com
+  - DOMAIN-SUFFIX,18comic.vip
