--- a/domestic.yaml
+++ b/domestic.yaml
@@ -8,3 +8,5 @@ payload:
   - DOMAIN-SUFFIX,videocardz.com
 #-------------------iacg----------------------------------  
   - DOMAIN-SUFFIX,iacg.site
+#-------------------gov----------------------------------  
+  - DOMAIN-KEYWORD,gov
