--- a/domestic.yaml
+++ b/domestic.yaml
@@ -1,7 +1,7 @@
 payload:
 #-------------------op.gg----------------------------------
   - DOMAIN-SUFFIX,op.gg
-  - DOAMIN,opgg-static.akamaized.net
+  - DOMAIN,opgg-static.akamaized.net
 #-------------------dandanplay----------------------------------
   - DOMAIN,dandanplay.dandanplay-blacksheepwall.workers.dev
 #-------------------videocardz----------------------------------
