--- a/domestic.yaml
+++ b/domestic.yaml
@@ -10,3 +10,6 @@ payload:
   - DOMAIN-SUFFIX,iacg.site
 #-------------------gov----------------------------------  
   - DOMAIN-KEYWORD,gov
+#-------------------ipv6---------------------------------- 
+  - DOMAIN-KEYWORD,ipv6
+  - DOMAIN,speed.neu6.edu.cn
