--- a/domestic.yaml
+++ b/domestic.yaml
@@ -18,3 +18,8 @@ payload:
 #-------------------rockstar launcher----------------------------------
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
   - DOMAIN-SUFFIX,rockstargames.com
+#-------------------beat saber---------------------------------
+  - DOMAIN-SUFFIX,beatsaver.com
+  - DOMAIN-SUFFIX,bsaber.com
+  - DOMAIN-SUFFIX,scoresaber.com
+  - DOMAIN-SUFFIX,skystudioapps.com
