--- a/domestic.yaml
+++ b/domestic.yaml
@@ -19,7 +19,7 @@ payload:
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
   - DOMAIN-SUFFIX,rockstargames.com
 #-------------------beat saber---------------------------------
-  - DOMAIN-SUFFIX,beatsaver.com
-  - DOMAIN-SUFFIX,bsaber.com
-  - DOMAIN-SUFFIX,scoresaber.com
- 
+#  - DOMAIN-SUFFIX,beatsaver.com
+#  - DOMAIN-SUFFIX,bsaber.com
+#  - DOMAIN-SUFFIX,scoresaber.com
+#  - DOMAIN-SUFFIX,skystudioapps.com 
