--- a/domestic.yaml
+++ b/domestic.yaml
@@ -20,3 +20,5 @@ payload:
 #  - DOMAIN-SUFFIX,bsaber.com
 #  - DOMAIN-SUFFIX,scoresaber.com
 #  - DOMAIN-SUFFIX,skystudioapps.com 
+#--------------------parsec---------------------------------
+   - DOMAIN-SUFFIX,parsec.app
