--- a/domestic.yaml
+++ b/domestic.yaml
@@ -26,3 +26,4 @@ payload:
   - DOMAIN-SUFFIX,oce-blue.lol.sgp.pvp.net
   - DOMAIN-SUFFIX,lolstatic-a.akamaihd.net
   - DOMAIN-SUFFIX,oce.leagueoflegends.com
+  - DOMAIN-SUFFIX,store.leagueoflegends.com
