--- a/domestic.yaml
+++ b/domestic.yaml
@@ -27,3 +27,5 @@ payload:
   - DOMAIN-SUFFIX,lolstatic-a.akamaihd.net
   - DOMAIN-SUFFIX,oce.leagueoflegends.com
   - DOMAIN-SUFFIX,store.leagueoflegends.com
+#-------------------IMDB----------------------------------
+  - DOMAIN-SUFFIX,imdb.com
