--- a/domestic.yaml
+++ b/domestic.yaml
@@ -33,4 +33,6 @@ payload:
   - DOMAIN-SUFFIX,epicgames.com
   - DOMAIN-SUFFIX,helpshift.com
   - DOMAIN-SUFFIX,paragon.com
+#-------------------DOCKER----------------------------------  
+  - DOMAIN,hub.docker.com
   - DOMAIN-SUFFIX,unrealengine.com
