--- a/onlinegame.yaml
+++ b/onlinegame.yaml
@@ -9,3 +9,7 @@ payload:
   - '103.240.226.0/24'
   - '103.240.226.255/24'
 #-------------------Nintendo switch server---------------------------------- 
+
+#Maplestory-TW
+  - '202.80.104.0/24'
+  
