--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -21,3 +21,4 @@
   - DOMAIN-SUFFIX,nyahentai.com
   - DOMAIN-SUFFIX,mgstage.com
   - DOMAIN-SUFFIX,hembed.com
+  - DOMAIN-SUFFIX,wallpaperflare.com
