--- a/domestic.yaml
+++ b/domestic.yaml
@@ -29,5 +29,5 @@ payload:
   - DOMAIN-SUFFIX,unrealengine.com
 #-------------------techpowerup---------------------------------- 
   - DOMAIN-SUFFIX,techpowerup.com
-
-  
+#-------------------pyncmd---------------------------------- 
+  - DOMAIN,pyncmd.vercel.app
