--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -20,3 +20,4 @@
   - DOMAIN-SUFFIX,18comic.vip
   - DOMAIN-SUFFIX,nyahentai.com
   - DOMAIN-SUFFIX,hembed.com
+  - DOMAIN,dany.dandanplay-blacksheepwall.workers.dev
