--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -22,3 +22,4 @@
   - DOMAIN-SUFFIX,nyahentai.com
   - DOMAIN-SUFFIX,hembed.com
   - DOMAIN,dany.dandanplay-blacksheepwall.workers.dev
+  - DOMAIN-SUFFIX,up-timely.com
