--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -23,3 +23,4 @@
   - DOMAIN-SUFFIX,hembed.com
   - DOMAIN,dany.dandanplay-blacksheepwall.workers.dev
   - DOMAIN-SUFFIX,up-timely.com
+  - DOMAIN-SUFFIX,sb-cd.com
