--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -318,15 +318,15 @@ proxy-providers:
       interval: 600
       url: http://www.gstatic.com/generate_204  
   
-  #free6:      
-  #  type: http
-  #  url:  "https://raw.githubusercontent.com/freefq/free/master/v2" 
-  #  interval: 3600
-  #  path: ./Proxy/free6.yaml
-  #  health-check:
-  #    enable: true
-  #    interval: 600
-  #    url: http://www.gstatic.com/generate_204  
+  free6:      
+    type: http
+    url:  "https://raw.githubusercontent.com/awesome-vpn/awesome-vpn/master/all" 
+    interval: 3600
+    path: ./Proxy/free6.yaml
+    health-check:
+      enable: true
+      interval: 600
+      url: http://www.gstatic.com/generate_204  
 
 
   #MIXED US:      
@@ -424,7 +424,7 @@ proxy-groups:
       - free3
       - free4
       - free5
-      #- free6
+      - free6
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
@@ -451,7 +451,7 @@ proxy-groups:
       - free3
       - free4
       - free5
-      #- free6
+      - free6
 
   # 国际流媒体服务
   - name: "Streaming"
