--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -24,3 +24,4 @@
   - DOMAIN,dany.dandanplay-blacksheepwall.workers.dev
   - DOMAIN-SUFFIX,up-timely.com
   - DOMAIN-SUFFIX,sb-cd.com
+  - DOMAIN-SUFFIX,titz.top
