--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -26,3 +26,13 @@
   - DOMAIN-SUFFIX,sb-cd.com
   - DOMAIN-SUFFIX,titz.top
   - DOMAIN-SUFFIX,teknik.app
+  - DOMAIN-SUFFIX,jits.cc
+  - DOMAIN-SUFFIX,pengu.us
+  - DOMAIN-SUFFIX,stealthshop.cf
+  - DOMAIN-SUFFIX,jits.site
+  - DOMAIN-SUFFIX,nekoshop.cf
+  - DOMAIN-SUFFIX,quotanx.in
+  - DOMAIN-SUFFIX,tiny.cc
+  - DOMAIN-SUFFIX,jits.ga
+  - DOMAIN-SUFFIX,partyshop.xyz
+  - DOMAIN-SUFFIX,rebrand.ly
