--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -38,3 +38,5 @@
   - DOMAIN-SUFFIX,rebrand.ly
   - DOMAIN-SUFFIX,rinuploads.org
   - DOMAIN-SUFFIX,jdbstatic.com
+  - DOMAIN-SUFFIX,shortpixel.ai
+  - DOMAIN-SUFFIX,cwwatch.net
