--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -42,3 +42,5 @@
   - DOMAIN-SUFFIX,cwwatch.net
   - DOMAIN-SUFFIX,attackers.net
   - DOMAIN-SUFFIX,hk1lib.org
+  - DOMAIN-SUFFIX,chkaja.com
+  - DOMAIN-SUFFIX,hxcy.moe
