rm tencent/ji yaml, fix typo for phone

--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -11,7 +11,7 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 🎵 网易云音乐 = select,🎵 网易云音乐,use=true,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港 | HK
+main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=香港 | HK
 backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,SSRCLOUD CNIX,use=true
