--- a/domestic.yaml
+++ b/domestic.yaml
@@ -41,3 +41,5 @@ payload:
   - DOMAIN,trackme.theom.nz
   - DOMAIN,open.stealth.si
   - DOMAIN,hub.bugout.link
+ #弹弹
+  - DOMAIN,dany.dandanplay-blacksheepwall.workers.dev
