--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -575,7 +575,7 @@ rule-providers:
     type: http
     behavior: classical
     path: ./RuleSet/Extra/SteamCN.yaml
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
     interval: 86400
 
   
@@ -660,8 +660,8 @@ rule-providers:
   
   Telegram:
     type: http
-    behavior: domain
-    url: "https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list"
+    behavior: ipcidr
+    url: "https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt"
     path: ./ruleset/Telegram.yaml
     interval: 86400
 
@@ -776,7 +776,7 @@ rules:
   - RULE-SET,Steam,✈️PROXY
  
   # Telegram
-  - RULE-SET,Telegram,✈️PROXY
+  - RULE-SET,Telegram,✈️PROXY,no-resolve
   #------------------------------------------------------------------------------------------------------------------神机规则
 
   # (Streaming Media)
