--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -664,7 +664,20 @@ rule-providers:
     url: "https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt"
     path: ./ruleset/Telegram.yaml
     interval: 86400
+  
+  Epicgames:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/Epicgames.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.yaml"
+    interval: 86400
 
+  Rockstar:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/Rockstar.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Rockstar/Rockstar.yaml"
+    interval: 86400
 
 # 规则
 rules:
@@ -777,6 +790,12 @@ rules:
  
   # Telegram
   - RULE-SET,Telegram,✈️PROXY,no-resolve
+
+  #Epicgames
+  - RULE-SET,Epicgames,DIRECT
+
+  #Rockstar games
+  - RULE-SET,Rockstar,DIRECT
   #------------------------------------------------------------------------------------------------------------------神机规则
 
   # (Streaming Media)
