--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -33,6 +33,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Provider
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,🎵 网易云音乐#classical
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT#classical
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,MICROSOFT#classical
+RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Apple.yaml,DIRECT#classical
 DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SUFFIX,javdb.com,JAVSELECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Myrule.yaml,MYRULE#classical
@@ -58,7 +59,9 @@ IP-CIDR,121.51.40.0/24,DIRECT
 IP-CIDR,101.91.92.0/24,DIRECT
 GEOIP,CN,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY#domain
-
+DST-PORT,80,✈️PROXY
+DST-PORT,443,✈️PROXY
+DST-PORT,22,✈️PROXY
 FINAL,DIRECT
 
 [Host]
