--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -32,6 +32,7 @@ javauto = url-test,SSRCLOUD CNIX,use=true
 DOMAIN-SUFFIX,music.desperadoj.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/BanProgramAD.yaml,REJECT#classical
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,🎵 网易云音乐#classical
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml,🎵 网易云音乐#classical
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT#classical
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,MICROSOFT#classical
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Apple.yaml,DIRECT#classical
