rm akamaized.net to all
https://github.com/blackmatrix7/ios_rule_script/issues/134

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -1,8 +1,7 @@
 payload:
 #-------------------op.gg----------------------------------
 #  - DOMAIN-SUFFIX,op.gg
-#  - DOMAIN,opgg-static.akamaized.net
-   - DOMAIN-SUFFIX,akamaized.net
+   - DOMAIN,opgg-static.akamaized.net
 #-------------------videocardz----------------------------------
   - DOMAIN-SUFFIX,videocardz.com
 #-------------------gov----------------------------------  
