--- a/domestic.yaml
+++ b/domestic.yaml
@@ -41,3 +41,5 @@ payload:
   #- DOMAIN-SUFFIX,imdb.com
   - DOMAIN,dqpnq362acqdi.cloudfront.net
   - DOMAIN,db187550c7dkf.cloudfront.net
+#docker hub
+  - DOMAIN,d36jcksde1wxzq.cloudfront.net
