--- a/Myrule.yaml
+++ b/Myrule.yaml
@@ -4,6 +4,7 @@
   - DOMAIN-SUFFIX,javbus.com
   - DOMAIN-SUFFIX,prestige-av.com
   - DOMAIN-SUFFIX,moodyz.com
+  - DOMAIN-SUFFIX,ideapocket.com
   - DOMAIN-SUFFIX,faleno.jp
   - DOMAIN-SUFFIX,xn--p8jr2b2a2b5gvc4ed.com
   - DOMAIN-SUFFIX,cordcloud.biz
