am-a.akamaihd.net

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -22,6 +22,7 @@ payload:
   - DOMAIN-SUFFIX,lolstatic-a.akamaihd.net
   - DOMAIN-SUFFIX,oce.leagueoflegends.com
   - DOMAIN-SUFFIX,store.leagueoflegends.com
+  - DOMAIN,am-a.akamaihd.net
 #-------------------EPICGAME----------------------------------
 #  - DOMAIN-SUFFIX,epicgames.com
 #  - DOMAIN-SUFFIX,helpshift.com
