--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -8,6 +8,9 @@
   - DOMAIN-SUFFIX,faleno.jp
   - DOMAIN-SUFFIX,xn--p8jr2b2a2b5gvc4ed.com
   - DOMAIN-SUFFIX,cordcloud.biz
+  - DOMAIN,fast.lycorisrecoil.org
+  - DOMAIN-SUFFIX,api.ttt.sh
+  - DOMAIN-SUFFIX,cordc.net
   - DOMAIN-SUFFIX,duyaoss.com
   - DOMAIN-SUFFIX,playno1.com
   - DOMAIN-SUFFIX,jkforum.net
