--- a/CDN.yaml
+++ b/CDN.yaml
@@ -3,3 +3,5 @@ payload:
   - DOMAIN-SUFFIX,cloudfront.net
 #-------------------AkamaiCloud----------------------------------
   - DOMAIN-SUFFIX,akamaized.net
+#-------------------navismithapis-cdn----------------------------------
+  - DOMAIN,navismithapis-cdn.com
