--- a/CDN.yaml
+++ b/CDN.yaml
@@ -3,5 +3,6 @@ payload:
   - DOMAIN-SUFFIX,cloudfront.net
 #-------------------AkamaiCloud----------------------------------
   - DOMAIN-SUFFIX,akamaized.net
+  - DOMAIN-SUFFIX,akamai.net
 #-------------------navismithapis-cdn----------------------------------
   - DOMAIN,navismithapis-cdn.com
