--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -841,8 +841,8 @@ rules:
   - GEOIP,CN,DIRECT
 #————————————————————————————————————————————————————————————————————loyalsoldier  
   - RULE-SET,🧱gfw,✈️PROXY
-#————————————————————————————————————————————————————————————————————cdn direct
-  - RULE-SET,CDN,DIRECT
+#————————————————————————————————————————————————————————————————————cdn 
+  - RULE-SET,CDN,🇹🇼TikTok/baha
 #————————————————————————————————————————————————————————————————————openclash
   - DST-PORT,80,DST-PORT
   - DST-PORT,443,DST-PORT
