--- a/CDN.yaml
+++ b/CDN.yaml
@@ -4,5 +4,6 @@ payload:
 #-------------------AkamaiCloud----------------------------------
   - DOMAIN-SUFFIX,akamaized.net
   - DOMAIN-SUFFIX,akamai.net
+  - DOMAIN-SUFFIX,akamaihd.net
 #-------------------navismithapis-cdn----------------------------------
   - DOMAIN,navismithapis-cdn.com
