--- a/domestic.yaml
+++ b/domestic.yaml
@@ -16,13 +16,13 @@ payload:
 #--------------------parsec---------------------------------
   - DOMAIN-SUFFIX,parsec.app
 #-------------------league of legend AU----------------------------------
-  - DOMAIN-SUFFIX,riotgames.com
-  - DOMAIN-SUFFIX,riotcdn.net
-  - DOMAIN-SUFFIX,oce-blue.lol.sgp.pvp.net
-  - DOMAIN-SUFFIX,lolstatic-a.akamaihd.net
-  - DOMAIN-SUFFIX,oce.leagueoflegends.com
-  - DOMAIN-SUFFIX,store.leagueoflegends.com
-  - DOMAIN,am-a.akamaihd.net
+#  - DOMAIN-SUFFIX,riotgames.com
+#  - DOMAIN-SUFFIX,riotcdn.net
+#  - DOMAIN-SUFFIX,oce-blue.lol.sgp.pvp.net
+#  - DOMAIN-SUFFIX,lolstatic-a.akamaihd.net
+#  - DOMAIN-SUFFIX,oce.leagueoflegends.com
+#  - DOMAIN-SUFFIX,store.leagueoflegends.com
+#  - DOMAIN,am-a.akamaihd.net
 #-------------------EPICGAME----------------------------------
 #  - DOMAIN-SUFFIX,epicgames.com
 #  - DOMAIN-SUFFIX,helpshift.com
