--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -529,7 +529,6 @@ proxy-groups:
     type: select
     use:
       - SSRCLOUD CNIX 
-      - Cordcloud
     filter: '游戏'
 
   # Beat Saber/e-hentai
@@ -537,7 +536,8 @@ proxy-groups:
     type:  select
     use:
      - SSRCLOUD CNIX
-     - Cordcloud 
+    Proxies:
+     - Manual
     #filter: '美国'
   
 
