--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -267,15 +267,15 @@ proxy-providers:
       interval: 600
       url: http://www.gstatic.com/generate_204
   
-  bihai:      
-    type: http
-    url:  "https://proxies.bihai.cf/clash/proxies?c=HK,TW,KR,JP"  
-    interval: 3600
-    path: ./Proxy/free.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204    
+  #bihai:      
+  #  type: http
+  #  url:  "https://proxies.bihai.cf/clash/proxies?c=HK,TW,KR,JP"  
+  #  interval: 3600
+  #  path: ./Proxy/free.yaml
+  #  health-check:
+  #    enable: true
+  #    interval: 600
+  #    url: http://www.gstatic.com/generate_204    
   
   Leon406/SubCrawler:      
     type: http
@@ -437,7 +437,7 @@ proxy-groups:
   - name: "free(Auto)"
     type: url-test
     use:
-      - bihai
+      #- bihai
       - Leon406/SubCrawler
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
@@ -460,7 +460,7 @@ proxy-groups:
   - name: "free(Manual)"
     type: select
     use:    
-      - bihai
+      #- bihai
       - Leon406/SubCrawler
 
   # Bilibili国台
