--- a/Clash config/Router(neo).yaml
+++ b/Clash config/Router(neo).yaml
@@ -279,7 +279,7 @@ proxy-providers:
   
   Leon406/SubCrawler:      
     type: http
-    url:  "https://v1.mk/0wEmvtp"   
+    url:  "https://v1.mk/JwdjUcS"   
     interval: 3600
     path: ./Proxy/free2.yaml
     health-check:
