--- a/Clash config/Router.yaml
+++ b/Clash config/Router.yaml
@@ -354,7 +354,7 @@ proxy-groups:
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
-    filter: '香港|HK'
+    filter: '港'
    #lazy: true
    #disable-udp: true
 
@@ -660,8 +660,8 @@ rule-providers:
   
   Telegram:
     type: http
-    behavior: ipcidr
-    url: "https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt"
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
     path: ./ruleset/Telegram.yaml
     interval: 86400
   
