--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -1,5 +1,6 @@
 # Shadowrocket: 2022-07-21 17:24:08
 [General]
+ipv6 = true
 yaml = true
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
@@ -11,7 +12,7 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 🎵 网易云音乐 = select,🎵 网易云音乐,use=true,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=香港|HK
+main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港
 backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,SSRCLOUD CNIX,use=true
@@ -34,7 +35,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Clash/RuleSet/NeteaseMusic.yaml,🎵 网易云音乐#classical
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml,DIRECT#classical
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Microsoft.yaml,MICROSOFT#classical
-RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Apple.yaml,DIRECT#classical
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml,DIRECT#classical
 DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SUFFIX,javdb.com,JAVSELECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Myrule.yaml,MYRULE#classical
@@ -60,9 +61,9 @@ IP-CIDR,203.205.236.0/24,DIRECT
 IP-CIDR,121.51.40.0/24,DIRECT
 IP-CIDR,101.91.92.0/24,DIRECT
 GEOIP,CN,DIRECT
-#DST-PORT,80,✈️PROXY
-#DST-PORT,443,✈️PROXY
-#DST-PORT,22,✈️PROXY
+DST-PORT,80,✈️PROXY
+DST-PORT,443,✈️PROXY
+DST-PORT,22,✈️PROXY
 FINAL,DIRECT
 
 [Host]
