--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -62,9 +62,9 @@ IP-CIDR,203.205.236.0/24,DIRECT
 IP-CIDR,121.51.40.0/24,DIRECT
 IP-CIDR,101.91.92.0/24,DIRECT
 GEOIP,CN,DIRECT
-DST-PORT,80,✈️PROXY
-DST-PORT,443,✈️PROXY
-DST-PORT,22,✈️PROXY
+#DST-PORT,80,✈️PROXY
+#DST-PORT,443,✈️PROXY
+#DST-PORT,22,✈️PROXY
 FINAL,DIRECT
 
 [Host]
